--- a/package.json
+++ b/package.json
@@ -22,5 +22,7 @@
     "express": "^4.16.2",
     "mongoose": "^5.0.15"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "jest": "^22.4.3"
+  }
 }
