--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "mongoose": "^5.0.15"
   },
   "devDependencies": {
-    "jest": "^22.4.3"
+    "chai": "^4.1.2",
+    "chai-http": "^4.0.0",
+    "jest": "^22.4.3",
+    "mocha": "^5.2.0"
   }
 }
